feat: 미션 관련 에러 핸들링
