# src/modules/missions/controllers/mission.controller.ts
@@ -1,85 +1,16 @@
-import { Request, Response, NextFunction } from "express";
-import { StatusCodes } from "http-status-codes";
-import {
-  createMission,
-  createMemberMission,
-  getMyMissions,
-  successMission,
-  getStoreMissions,
-} from "../services/mission.service.js";
+import { Body, Controller, Post, Route, Tags } from "tsoa";
+import { createMission } from "../services/mission.service.js";
 import { createMissionRequest } from "../dtos/mission.dto.js";
+import { ApiResponse, success } from "../../../common/responses/response.js";
 
-// 미션 추가
-export const handleCreateMission = async (
-  req: Request,
-  res: Response,
-  next: NextFunction,
-) => {
-  console.log("미션을 추가하려합니다!");
-  console.log("body: ", req.body);
-
-  const mission = await createMission(req.body as createMissionRequest);
-
-  res.status(StatusCodes.OK).json({ result: mission });
-};
-
-// 도전 중인 미션에 추가
-export const handleMemberMission = async (
-  req: Request,
-  res: Response,
-  next: NextFunction,
-) => {
-  console.log("도전 중인 미션에 추가하려합니다!");
-  console.log("body: ", req.body);
-
-  const userId = 1;
-  const missionId = Number(req.params.missionId);
-  const memberMission = await createMemberMission(userId, missionId);
-
-  res.status(StatusCodes.OK).json({ result: memberMission });
-};
-
-// 내가 진행 중인 미션 조회
-export const handleGetMyMissions = async (
-  req: Request,
-  res: Response,
-  next: NextFunction,
-) => {
-  const userId = 1;
-  const query = {
-    page: Number(req.query.page) || 1,
-    limit: Number(req.query.limit) || 10,
-  };
-  const missions = await getMyMissions(userId, query);
-
-  res.status(StatusCodes.OK).json({ result: missions });
-};
-
-// 미션 진행 완료로 바꾸기
-export const handleSuccessMission = async (
-  req: Request,
-  res: Response,
-  next: NextFunction,
-) => {
-  const userId = 1;
-  const missionId = Number(req.params.missionId);
-  const mission = await successMission(userId, missionId);
-
-  res.status(StatusCodes.OK).json({ result: mission });
-};
-
-// 특정 가게의 미션 목록 조회
-export const handleGetStoreMission = async (
-  req: Request,
-  res: Response,
-  next: NextFunction,
-) => {
-  const storeId = Number(req.params.storeId);
-  const query = {
-    page: Number(req.query.page) || 1,
-    limit: Number(req.query.limit) || 10,
-  };
-  const missions = await getStoreMissions(storeId, query);
-
-  res.status(StatusCodes.OK).json({ result: missions });
-};
+@Route("missions")
+@Tags("Missions")
+export class MissionController extends Controller {
+  @Post() // 가게에 미션 추가
+  public async handleCreateMission(
+    @Body() body: createMissionRequest,
+  ): Promise<ApiResponse<any>> {
+    const mission = await createMission(body as createMissionRequest);
+    return success(mission);
+  }
+}
